# stockfish_evaluation

./: .gitignore  Makefile  commons.py  devenv.nix  devenv.nix.bcp  flake.nix  logic.py  main.py  pyproject.toml  stockfish_downloader.py  stockfish_handler.py  testing.py
